Fixed overflow x

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -14,6 +14,7 @@ body {
 #app {
   position: relative;
   height: 100%;
+  overflow-x: hidden;
 }
 
 .app {
